Fixed Header not showing up after previous refactoring

--- a/css/shared.css
+++ b/css/shared.css
@@ -76,11 +76,6 @@ a {
     width: 100%;
     height: 100%;
     cursor: pointer;
-    display: none;
-}
-
-.lvlx-header-back-button-link.visible>.lvlx-header-back-button {
-    display: inline-block;
 }
 
 /* Cards */
